# Standalone — explicitly NOT part of the wild workspace, since the
# wild workspace builds for the host triple (ELF / Mach-O) and this
# package only builds for wasm32-wasip2. Keeps the workspace's
# `cargo check` from dragging this in.
[workspace]

[package]
name = "wasm-rust-medium"
version = "0.1.0"
edition = "2024"
publish = false
description = "Synthetic medium-size rust workload for the wasm bench matrix."

[[bin]]
name = "wasm-rust-medium"
path = "src/main.rs"

# Deliberately representative-mid-size deps:
#   - regex: pulls in regex-syntax + a non-trivial DFA compiler.
#   - serde_json: pulls in serde + the JSON tokeniser. Both
#     exercise lots of monomorphisations and string handling.
#   - sha2: a tight compute kernel; reasonable cross-section.
# All three build cleanly to wasm32-wasip2 with no
# system-config-dir / home / git deps that would block the build.
[dependencies]
regex = { version = "1", default-features = false, features = ["std", "perf"] }
serde_json = "1"
sha2 = { version = "0.10", default-features = false }

[profile.release]
# Match what wild's downstream bench targets typically ship —
# LTO off (we want to measure the *link*, not LTO) and codegen-
# units default so we get realistic per-CGU object input set.
lto = "off"
opt-level = 3
panic = "abort"
strip = false
